# sovereign-dna

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  test_a11y.cjs
.Jules/: palette.md
.github/workflows/: build.yml  ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_core_schema.sql  002_annotations.sql  003_reference_databases.sql  004_research_digest.sql  005_workbench.sql
src-tauri/src/: error.rs  lib.rs
src-tauri/src/analysis/: ancestry.rs  carrier.rs  health_risk.rs  mod.rs  pharmacogenomics.rs  traits.rs
src-tauri/src/commands/: ancestry.rs  ask.rs  carrier.rs  digest.rs  explorer.rs  genome.rs  genomemap.rs  health.rs  import.rs  local_llm.rs  mod.rs  pharma.rs  reference.rs  report.rs  research.rs  traits.rs  workbench.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/parser/: ancestry.rs  mod.rs  twentythree.rs  vcf.rs
src-tauri/src/reference/: clinvar.rs  downloader.rs  gwas.rs  manager.rs  mod.rs  pharmgkb.rs  snpedia.rs
src-tauri/src/report/: pdf.rs
src-tauri/src/research/: digest.rs  fetcher.rs  intent.rs  matcher.rs  mod.rs  scanner.rs  workbench.rs
src/design-system/: tokens.ts
src/hooks/: useFileDrop.ts  useKaryogramData.ts  usePlot.ts  useSnpData.ts  useTauriCommand.ts
src/lib/: constants.ts  formatters.ts  tauri-bridge.ts
src/pages/: Ancestry.tsx  Ask.tsx  CarrierStatus.tsx  Dashboard.tsx  Explorer.tsx  GenomeMap.tsx  HealthRisks.tsx  Import.tsx  Pharmacogenomics.tsx  (+5 more)
(+23 files in other folders)
