[package]
name = "sovereign-dna"
version = "0.1.0"
description = "Your genome, your device. Fully local DNA analysis."
authors = ["SovereignDNA Contributors"]
license = "MIT"
repository = "https://github.com/anthropics/sovereign-dna"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
flate2 = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
